# Tina

./: .codeiumignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE.txt  README.md  uml
assets/: CMakeLists.txt
core/: CMakeLists.txt
core/include/: Game.hpp  GameObject.hpp  HUD.hpp  TextureManager.hpp  world.hpp
core/src/: Game.cpp  TextureManager.cpp  main.cpp
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h  wgl.h
engine/: CMakeLists.txt  EnginePch.hpp  dummy.cpp
engine/base/: AbstractWindow.cpp  AbstractWindow.hpp  Application.cpp  Application.hpp  Exception.hpp  GlfwWindow.cpp  GlfwWindow.hpp  Log.cpp  Log.hpp  PlatformDetection.hpp  Util.cpp  Util.hpp
engine/core/: Application.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp  GlfwWindow.cpp  GlfwWindow.hpp  Layer.cpp  Layer.hpp  Level.cpp  Level.hpp  PlatformDetection.hpp  Singleton.hpp  Util.cpp  Util.hpp  View.cpp  View.hpp  Window.cpp  Window.hpp
engine/core/src/: Core.cpp
engine/core/src/components/: RectangleComponent.cpp  SpriteComponent.cpp
engine/ecs/: Ecs.hpp  Ecs.inl  RendererSystem.hpp
engine/framework/: Application.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  EngineDefines.hpp  GlfwUtils.cpp  GlfwUtils.hpp  GlfwWindow.cpp  GlfwWindow.hpp  InitArgs.hpp  NativeWindow.hpp
engine/game/: GameApplication.cpp  GameApplication.hpp
engine/log/: CMakeLists.txt  Log.cpp  Log.hpp  LogManager.cpp  LogManager.hpp  Logger.cpp  Logger.hpp
engine/resources/shaders/: 2d.fs.sc  2d_fs.sc  2d_vs.sc  fs_2d.sc  sprite_fs.sc  sprite_vs.sc  varying.def.sc  vs_2d.sc
engine/shaders/: f_simple.sc  fs_simple.sc  v_simple.sc  vs_basic.sc  vs_simple.sc
engine/shaders/include/: bgfx.sh  shaderlib.sh
engine/src/: TinaEngine.hpp
engine/src/application/: EditorApplication.cpp  EditorApplication.hpp  GameApplication.cpp  GameApplication.hpp  GlfwWindowApplication.cpp  GlfwWindowApplication.hpp
engine/src/base/: Copyable.hpp  NonCopyable.hpp  String.cpp  String.hpp  StringBuffer.cpp  StringBuffer.hpp
engine/src/components/: AnimationComponent.hpp  RenderComponents.hpp  SpriteComponent.hpp  TextureComponent.hpp
engine/src/core/: Config.cpp  Config.hpp  Core.hpp  CoreApplication.cpp  CoreApplication.hpp  Exception.hpp  GameApplication.cpp  GameApplication.hpp  IRenderer.hpp  Logger.cpp  Logger.hpp  ParserYamlConfig.cpp  ParserYamlConfig.hpp  Platform.hpp  RenderCommand.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderUniform.cpp  ShaderUniform.hpp  YamlParser.cpp  YamlParser.hpp
engine/src/ecs/: Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
engine/src/filesystem/: AutoCloseable.hpp  Buffer.hpp  BufferAllocator.hpp  BufferStreamBuf.hpp  Byte.hpp  ByteArrayOutputStream.cpp  ByteArrayOutputStream.hpp  ByteBuffer.cpp  ByteBuffer.hpp  Closeable.hpp  File.cpp  File.hpp  FileInputStream.cpp  FileInputStream.hpp  FileOutputStream.cpp  FileOutputStream.hpp  FileStream.hpp  Flushable.hpp  InputStream.hpp  OutputStream.hpp  Path.cpp  Path.hpp  ResourcePath.cpp  ResourcePath.hpp
engine/src/flatphysics/: FlatConverter.cpp  FlatConverter.hpp  FlatMath.hpp  FlatVector.cpp  FlatVector.hpp
engine/src/framework/: Application.cpp  Application.hpp  Configuration.hpp  Core.cpp  Core.hpp  Engine.cpp  Engine.hpp  Error.hpp  GraphicsBackend.hpp  Layer.cpp  Layer.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  Test.cpp  Test.hpp  Typedefs.hpp  View.cpp  View.hpp  Window.cpp  Window.hPP  Window.hpp
engine/src/graphics/: Animation.cpp  Animation.hpp  BgfxCallback.cpp  BgfxCallback.hpp  BgfxRenderer.cpp  BgfxRenderer.hpp  Camera.hpp  Color.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderLayer.hpp  RenderLayerManager.cpp  RenderLayerManager.hpp  Renderer2D.cpp  Renderer2D.hpp  SceneNode.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp  VertexBuffer.cpp  VertexBuffer.hpp
engine/src/gui/: BgfxGuiSystem.cpp  BgfxGuiSystem.hpp  GuiComponent.hpp  GuiSystem.cpp  GuiSystem.hpp  IGuiSystem.hpp
engine/src/io/: Buffer.hpp  Byte.hpp  ByteArrayInputStream.cpp  ByteArrayInputStream.hpp  Closeable.hpp  FileInputStream.cpp  FileInputStream.hpp  FileOutputStream.cpp  FileOutputStream.hpp  Flushable.hpp  InputStream.hpp  OutputStream.hpp
engine/src/log/: Log.hpp
engine/src/math/: Random.hpp  Rect.hpp  Vector.cpp  Vector.hpp  Vector2.hpp  Vector2i.hpp
engine/src/memory/: Allocator.cpp  Allocator.hpp  MemoryPool.cpp  MemoryPool.hpp  TrackMemory.hpp  checked_delete.hpp
engine/src/resource/: Resource.cpp  Resource.hpp  ResourceHandle.cpp  ResourceHandle.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceType.hpp  ShaderResource.cpp  ShaderResource.hpp  TextureResource.cpp  TextureResource.hpp
engine/src/scene/: Scene.hpp
engine/src/time/: StopWatch.hpp
engine/src/tool/: BgfxUtils.cpp  BgfxUtils.hpp  Endianness.hpp  GlfwTool.cpp  GlfwTool.hpp  Parser.cpp  Parser.hpp  SDL3.hpp  ShaderUtils.cpp  ShaderUtils.hpp  Tracy.cpp  Tracy.hpp  bgfx_utils.cpp  bgfx_utils.h
engine/src/window/: EventHandle.hpp  EventHandler.hpp  EventListenerList.hpp  GLFWInput.cpp  GLFWInput.hpp  GLFWWindow.cpp  GLFWWindow.hpp  GlfwWindow.cpp  GlfwWindow.hpp  IWindow.hpp  IWindowResizeListener.hpp  Input.cpp  Input.hpp  InputHandler.cpp  InputHandler.hpp  SDLInput.cpp  SDLInput.hpp  SDLWindow.cpp  SDLWindow.hpp  Window.hpp
engine/timer/: Clock.hpp
examples/basic_logger/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  LogManager.cpp  LogManager.hpp  test.txt
tests/container/: StringTest.cpp
tests/core/: CoreTest.cpp
tests/log/: LoggerTest.cpp
tests/opengl/: example.cpp
tests/src/: BufferTest.cpp  ByteArrayInputStreamTest.cpp  ByteArrayOutputStream.cpp  ByteBufferTest.cpp  EndiannessTest.cpp  FileInputStreamTest.cpp  FileOutputStreamTest.cpp  FileTest.cpp  MainTest.cpp  ShaderUtilsTest.cpp  StopWatchTest.cpp  StringBufferTest.cpp  StringTest.cpp  Test.cpp  TestBgfxWindow.cpp  TestPoint.cpp  VectorTest.cpp  test_vector.cpp
(+1074 files in other folders)
