set(SDL3_SOURCES_DIR "${CMAKE_SOURCE_DIR}/libs/SDL3")
set(SDL3_INCLUDE_DIR "${SDL3_SOURCES_DIR}/include")
set(SDL3_LIB_DIR "${SDL3_SOURCES_DIR}/lib")

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")

find_package(GLFW REQUIRED)

file(GLOB_RECURSE CORE_SRC
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp"
)

find_library(SDL3MAIN_LIB SDL3 ${SDL3_LIB_DIR})


file(GLOB SDL3_LIBS "${SDL3_LIB_DIR}/*.lib")

# 复制SDL3可执行文件（如果需要）
file(COPY "${SDL3_SOURCES_DIR}/bin/" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")

# 显示SDL3_INCLUDE_DIR
message(STATUS "SDL3_INCLUDE_DIR: ${SDL3_INCLUDE_DIR}")
message(STATUS "CORE_SRC: ${CORE_SRC}")


add_executable(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PUBLIC ${CORE_SRC})
target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_include_directories(${PROJECT_NAME} PRIVATE ${SDL3_INCLUDE_DIR})
target_link_directories(${PROJECT_NAME} PRIVATE ${SDL3_LIB_DIR})
target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL3MAIN_LIB} ${SDL3_LIBS})
