# glfw
set(GLFW_BUILD_EXAMPLES FALSE CACHE INTERNAL "")
set(GLFW_BUILD_TESTS TRUE CACHE INTERNAL "")
set(GLFW_BUILD_DOCS FALSE CACHE INTERNAL "")
set(GLFW_INSTALL FALSE CACHE INTERNAL "")

    #set(GLFW_BUILD_WAYLAND ON)
    #set(GLFW_USE_WAYLAND ON)
    #set(GLFW_BUILD_X11 OFF)

# bgfx
set(BGFX_BUILD_TOOLS TRUE CACHE INTERNAL "")
set(BGFX_BUILD_EXAMPLES TRUE CACHE INTERNAL "")
set(BGFX_CUSTOM_TARGETS FALSE CACHE INTERNAL "")
set(BGFX_BUILD_EXAMPLE_COMMON FALSE CACHE INTERNAL "")


add_subdirectory(bgfx.cmake)
add_subdirectory(glfw)

set(TINA_LIBRARIES
        bx
        bimg
        bimg_decode
        bgfx
        glfw
        CACHE INTERNAL "")
